fix: Fix overflowing long lines of text on small screens

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -120,6 +120,16 @@
 		}
 	}
 
+	p,
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		@apply break-words;
+	}
+
 	.disable-transitions * {
 		@apply transition-none!;
 	}
